# DFSM3200-robotic-arm

./: README.md  Report structure.odt  Servo.ino  lenovo_slave.sh  master.sh  ready.sh  samsung_master.sh  slave.sh
Hand-ins/: TaskRoboticArm_ProbReq.docx  TaskRoboticArm_ProbReq_rev1.docx
Hand-ins/Diagrams/: Architecture.tif  NodeGraph.vsdx  Packages.vsdx  SequenceDiagram.vsdx  UseCase.vsdx
Hand-ins/February 8th/: DFMS3200-RoboticArm_TASK1.ino
Hand-ins/Report/: ARPA-FinalReport.tex  FinalReport.aux  FinalReport.tex  FinalReport.toc  FinalReportNotes.tex
camera/: CMakeLists.txt  package.xml
camera/scripts/: .color_detection.py.swp  color_detection.py
camera_mock/: CMakeLists.txt  package.xml
controller/: CMakeLists.txt  package.xml
controller/src/: .KinematicHandler.cpp.swp  Angles.h  KinematicHandler.cpp  KinematicHandler.h  controller.cpp
ik_srvs/: CMakeLists.txt  package.xml
ik_srvs/srv/: CartesianToJoint.srv
joint_publisher/: CMakeLists.txt  package.xml
joint_publisher/src/: main.cpp
kinematic_server/: CMakeLists.txt  package.xml
kinematic_server/src/: kinematic_server.cpp
matlab/: CMakeLists.txt  kinematics.m  package.xml  start_matlab.sh
robotic_arm/: CMakeLists.txt  package.xml
robotic_arm/firmware/: CMakeLists.txt  Conversion.h  SpeedServo.cpp  SpeedServo.h  Timer.cpp  Timer.h  main.cpp
robotic_arm/launch/: master.launch  samsung.launch
servo_msgs/: CMakeLists.txt  package.xml
servo_msgs/msg/: JointAngles.msg
simple_robotic_model/: CMakeLists.txt  fuzzyLogicKinematics.m  matlab.m  package.xml
simple_robotic_model/config/: .simple_robotic_model_control.yaml.swp  fifth_joint.yaml  fourth_joint.yaml  joints.yaml  second_joint.yaml  simple_robotic_model_control.yaml  simple_robotic_model_joint_position.yaml  third_joint.yaml
simple_robotic_model/launch/: display.launch  gazebo.launch  joints.launch
simple_robotic_model/urdf/: simple_model.dae  simple_model.urdf  simple_model.urdf.xacro  simple_model_backup.urdf.xacro  simple_model_generated.urdf  simple_model_rounded.dae  simple_model_v1_backup.urdf.xacro
