<?xml version="1.0"?>
<package format="2">
  <name>kinematic_server</name>
  <version>0.0.0</version>
  <description>The kinematic_server package</description>

  <maintainer email="andre@todo.todo">andre</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ik_srvs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>servo_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>ik_srvs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>servo_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ik_srvs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>servo_msgs</exec_depend>

  <export>

  </export>
</package>
