<?xml version="1.0"?>
<package format="2">
  <name>matlab</name>
  <version>0.0.0</version>
  <description>The matlab package</description>

  <maintainer email="andre@todo.todo">andre</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
